LLINT C loop warning fix for GCC https://bugs.webkit.org/show_bug.cgi?id=112145

Reviewed by Filip Pizlo.

* llint/LowLevelInterpreter.cpp:
(JSC::CLoop::execute):


Canonical link: https://commits.webkit.org/130561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145703 268f45cc-cd09-0410-ab3c-d52691b4dbfc